# django-template

./: .gitignore  pyproject.toml  todo
core/: urls.py  wsgi.py
core/settings/: apps.py  auth.py  common.py  rest.py
docker/: Dockerfile
main/: apps.py
main/migrations/: 0001_initial.py  0002_auto_20191027_1828.py  0003_auto_20191027_1831.py
main/views/: user.py
src/conf/: .env.example  settings.py  urls.py
src/user/: admin.py  apps.py  auth_backend.py  models.py  serializers.py  urls.py  views.py
src/user/migrations/: 0001_initial.py
